# cifar10

./: .gitignore  README.md  pyproject.toml  train.py
cifar10/: __init__.py  module.py  utils.py
