[tool.poetry]
name = "cifar10"
version = "0.1.0"
description = "CIFAR-10 Classification Example with MLflow and PyTorch Lightning"
authors = ["Shunta Komatsu <shuntak217@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
mlflow = "^1.7.2"
numpy = "^1.18.2"
pytorch-lightning = "^0.7.1"
torch = "^1.4.0"
torchvision = "^0.5.0"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
flake8 = "^3.7.9"
isort = "^4.3.21"
mypy = "^0.770"
pytest = "^5.4.1"

[tool.black]
line-length = 120

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
